--- a/_config.yml
+++ b/_config.yml
@@ -11,11 +11,11 @@ pygments: true
 title : Jekyll Bootstrap
 tagline: Site Tagline
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
-  feedburner : feedname
+  name : Code4HK
+  email : code4hk@gmail.com
+  github : code4hk
+  twitter : code4hk
+  feedburner : code4hk
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
@@ -25,7 +25,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://username.github.io
+production_url : http://blog.code4.hk
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
