--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ JB :
   analytics :
     provider : google 
     google : 
-        tracking_id : 'UA-123-12'
+    tracking_id : 'UA-48349521-2'
     getclicky :
       site_id : 
     mixpanel :
