--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ pygments: true
 # so be sure to set them if your theme uses them.
 #
 title : Code4HK Blog
-tagline: Drive Social Changes By Codes
+tagline: Drive Social Changes By Code
 author :
   name : Code4HK
   email : code4hk@gmail.com
